tests/requests/snapshots/r#mod__requests__medias__can_get_media_by_id.snap
---
source: tests/requests/medias.rs
expression: media_response
---
Object {
    "access_token": String("7c626e00-14a6-4185-9001-03a8bfebefc7"),
    "access_url": String("http://localhost:5150/public/media/7c626e00-14a6-4185-9001-03a8bfebefc7"),
    "book_id": Number(1),
    "chapter_id": Null,
    "created_at": String("2025-10-10T10:19:24Z"),
    "description": String("Test Description"),
    "duration": Number(120),
    "file_path": String("/test/path.mp3"),
    "file_size": Number(1024000),
    "file_type": String("audio"),
    "file_version": Number(1),
    "id": Number(1),
    "is_public": Bool(false),
    "mime_type": String("audio/mpeg"),
    "original_filename": String("test.mp3"),
    "play_count": Number(0),
    "qr_code_path": Null,
    "title": String("Test Media"),
    "updated_at": String("2025-10-10T10:19:24.725136Z"),
    "user_id": Number(1),
}
