tests/requests/snapshots/r#mod__requests__medias__can_list_medias.snap
---
source: tests/requests/medias.rs
expression: medias
---
[
    Object {
        "access_token": String("01d0c19f-95ad-4fbb-917c-4f7914cd8b9f"),
        "access_url": String("http://localhost:5150/public/media/01d0c19f-95ad-4fbb-917c-4f7914cd8b9f"),
        "book_id": Number(1),
        "chapter_id": Null,
        "created_at": String("2025-10-10T17:00:22Z"),
        "description": String("First audio"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(1),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Audio 1"),
        "updated_at": String("2025-10-10T17:00:22.840792Z"),
        "user_id": Number(1),
    },
    Object {
        "access_token": String("70718aa5-59b1-4295-8d62-abbc1dddeecf"),
        "access_url": String("http://localhost:5150/public/media/70718aa5-59b1-4295-8d62-abbc1dddeecf"),
        "book_id": Number(1),
        "chapter_id": Null,
        "created_at": String("2025-10-10T17:00:22Z"),
        "description": Null,
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(2),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Audio 2"),
        "updated_at": String("2025-10-10T17:00:22.842006Z"),
        "user_id": Number(1),
    },
    Object {
        "access_token": String("6efa3bec-5a1d-4017-ac9b-47e0ac63d474"),
        "access_url": String("http://localhost:5150/public/media/6efa3bec-5a1d-4017-ac9b-47e0ac63d474"),
        "book_id": Number(1),
        "chapter_id": Null,
        "created_at": String("2025-10-10T17:00:22Z"),
        "description": String("Third audio"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(3),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Audio 3"),
        "updated_at": String("2025-10-10T17:00:22.842976Z"),
        "user_id": Number(1),
    },
]
