tests/requests/snapshots/r#mod__requests__medias__can_list_medias_by_book_id.snap
---
source: tests/requests/medias.rs
expression: book1_medias
---
[
    Object {
        "access_token": String("bfd9bda5-63fd-49ea-9bbd-c2c56a10f360"),
        "access_url": String("http://localhost:5150/public/media/bfd9bda5-63fd-49ea-9bbd-c2c56a10f360"),
        "book_id": Number(1),
        "chapter_id": Null,
        "created_at": String("2025-10-11T16:51:08Z"),
        "description": String("First book audio"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(1),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Book 1 Audio 1"),
        "updated_at": String("2025-10-11T16:51:08.028844Z"),
        "user_id": Number(1),
    },
    Object {
        "access_token": String("8133df24-b164-4c53-b1f7-cdcd21c80bdf"),
        "access_url": String("http://localhost:5150/public/media/8133df24-b164-4c53-b1f7-cdcd21c80bdf"),
        "book_id": Number(1),
        "chapter_id": Null,
        "created_at": String("2025-10-11T16:51:08Z"),
        "description": String("Second book audio"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(2),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Book 1 Audio 2"),
        "updated_at": String("2025-10-11T16:51:08.029879Z"),
        "user_id": Number(1),
    },
]
