tests/requests/snapshots/r#mod__requests__medias__can_list_medias_by_chapter_only.snap
---
source: tests/requests/medias.rs
expression: parent_medias
---
[
    Object {
        "access_token": String("0948210a-513a-43db-94d9-5af03728c0b6"),
        "access_url": String("http://localhost:5150/public/media/0948210a-513a-43db-94d9-5af03728c0b6"),
        "book_id": Number(1),
        "chapter_id": Number(1),
        "created_at": String("2025-10-10T18:53:08Z"),
        "description": String("Media in parent chapter"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(1),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Parent Media"),
        "updated_at": String("2025-10-10T18:53:08.846643Z"),
        "user_id": Number(1),
    },
]
