tests/requests/snapshots/r#mod__requests__medias__can_list_medias_by_chapter_recursive.snap
---
source: tests/requests/medias.rs
expression: all_medias
---
[
    Object {
        "access_token": String("6f6e52be-38f6-4d75-944d-37d3b9adf2d2"),
        "access_url": String("http://localhost:5150/public/media/6f6e52be-38f6-4d75-944d-37d3b9adf2d2"),
        "book_id": Number(1),
        "chapter_id": Number(1),
        "created_at": String("2025-10-10T15:48:45Z"),
        "description": String("Media in parent chapter"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(1),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Parent Media"),
        "updated_at": String("2025-10-10T15:48:45.909060Z"),
        "user_id": Number(1),
    },
    Object {
        "access_token": String("7d2856c4-e62a-452a-96c5-dc3893d67f25"),
        "access_url": String("http://localhost:5150/public/media/7d2856c4-e62a-452a-96c5-dc3893d67f25"),
        "book_id": Number(1),
        "chapter_id": Number(2),
        "created_at": String("2025-10-10T15:48:45Z"),
        "description": String("Media in child chapter"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(2),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Child Media"),
        "updated_at": String("2025-10-10T15:48:45.910065Z"),
        "user_id": Number(1),
    },
    Object {
        "access_token": String("69eaab52-1752-4302-b32b-ecdad9774510"),
        "access_url": String("http://localhost:5150/public/media/69eaab52-1752-4302-b32b-ecdad9774510"),
        "book_id": Number(1),
        "chapter_id": Number(3),
        "created_at": String("2025-10-10T15:48:45Z"),
        "description": String("Media in grandchild chapter"),
        "duration": Number(120),
        "file_path": String("/test/path.mp3"),
        "file_size": Number(1024000),
        "file_type": String("audio"),
        "file_version": Number(1),
        "id": Number(3),
        "is_public": Bool(false),
        "mime_type": String("audio/mpeg"),
        "original_filename": String("test.mp3"),
        "play_count": Number(0),
        "qr_code_path": Null,
        "title": String("Grandchild Media"),
        "updated_at": String("2025-10-10T15:48:45.911160Z"),
        "user_id": Number(1),
    },
]
