tests/requests/snapshots/r#mod__requests__medias__can_update_media.snap
---
source: tests/requests/medias.rs
expression: updated_media
---
Object {
    "access_token": String("88dacaa6-bb48-4919-8bac-367307f4c47e"),
    "access_url": String("http://localhost:5150/public/media/88dacaa6-bb48-4919-8bac-367307f4c47e"),
    "book_id": Number(1),
    "chapter_id": Null,
    "created_at": String("2025-10-08T08:54:42Z"),
    "description": String("Updated Description"),
    "duration": Number(120),
    "file_path": String("/test/path.mp3"),
    "file_size": Number(1024000),
    "file_type": String("audio"),
    "file_version": Number(1),
    "id": Number(1),
    "is_public": Bool(true),
    "mime_type": String("audio/mpeg"),
    "original_filename": String("test.mp3"),
    "play_count": Number(0),
    "qr_code_path": Null,
    "title": String("Updated Title"),
    "updated_at": String("2025-10-08T08:54:42.933498Z"),
    "user_id": Number(1),
}
